{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 55,
  "lineage": "fba65b38-6965-b454-1eee-42587114e707",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfer--igw-030a1176b5bea64b5",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:internet-gateway/igw-030a1176b5bea64b5",
            "id": "igw-030a1176b5bea64b5",
            "owner_id": "667994629779",
            "tags.%": "0",
            "tags_all.%": "0",
            "vpc_id": "vpc-04623bbd67846e1f2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "tfer--vpc-04623bbd67846e1f2",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "id": "rtbassoc-0448fca66b5c79d0b",
            "route_table_id": "rtb-00e44179552178e42",
            "vpc_id": "vpc-04623bbd67846e1f2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfer--rtb-08982bbb172cbb507",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:route-table/rtb-08982bbb172cbb507",
            "id": "rtb-08982bbb172cbb507",
            "owner_id": "667994629779",
            "propagating_vgws.#": "0",
            "route.#": "1",
            "route.0.carrier_gateway_id": "",
            "route.0.cidr_block": "0.0.0.0/0",
            "route.0.core_network_arn": "",
            "route.0.destination_prefix_list_id": "",
            "route.0.egress_only_gateway_id": "",
            "route.0.gateway_id": "igw-030a1176b5bea64b5",
            "route.0.instance_id": "",
            "route.0.ipv6_cidr_block": "",
            "route.0.local_gateway_id": "",
            "route.0.nat_gateway_id": "",
            "route.0.network_interface_id": "",
            "route.0.transit_gateway_id": "",
            "route.0.vpc_endpoint_id": "",
            "route.0.vpc_peering_connection_id": "",
            "tags.%": "1",
            "tags.Name": "public-subnet3-routing",
            "tags_all.%": "1",
            "tags_all.Name": "public-subnet3-routing",
            "vpc_id": "vpc-04623bbd67846e1f2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfer--rtb-0b5528c96591c50d7",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:route-table/rtb-0b5528c96591c50d7",
            "id": "rtb-0b5528c96591c50d7",
            "owner_id": "667994629779",
            "propagating_vgws.#": "0",
            "route.#": "1",
            "route.0.carrier_gateway_id": "",
            "route.0.cidr_block": "0.0.0.0/0",
            "route.0.core_network_arn": "",
            "route.0.destination_prefix_list_id": "",
            "route.0.egress_only_gateway_id": "",
            "route.0.gateway_id": "igw-030a1176b5bea64b5",
            "route.0.instance_id": "",
            "route.0.ipv6_cidr_block": "",
            "route.0.local_gateway_id": "",
            "route.0.nat_gateway_id": "",
            "route.0.network_interface_id": "",
            "route.0.transit_gateway_id": "",
            "route.0.vpc_endpoint_id": "",
            "route.0.vpc_peering_connection_id": "",
            "tags.%": "1",
            "tags.Name": "public-subnet1-routing",
            "tags_all.%": "1",
            "tags_all.Name": "public-subnet1-routing",
            "vpc_id": "vpc-04623bbd67846e1f2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfer--subnet-0453ecb84ca59bd5e",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "id": "rtbassoc-050b801ed0382aaa1",
            "route_table_id": "rtb-0b5528c96591c50d7",
            "subnet_id": "subnet-0453ecb84ca59bd5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfer--subnet-0b58d1adb0e630c50",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "id": "rtbassoc-0e573a6ac08125d00",
            "route_table_id": "rtb-08982bbb172cbb507",
            "subnet_id": "subnet-0b58d1adb0e630c50"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:security-group/sg-04a49a0a388a49dff",
            "description": "security_group for test-eks-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a49a0a388a49dff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "667994629779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-04623bbd67846e1f2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-3643405068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04a49a0a388a49dff",
            "security_group_rule_id": "sgr-09e83001cb15346c2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2339194508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04a49a0a388a49dff",
            "security_group_rule_id": "sgr-0596028c454ab205b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfer--subnet-0453ecb84ca59bd5e",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:subnet/subnet-0453ecb84ca59bd5e",
            "assign_ipv6_address_on_creation": "false",
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": "false",
            "enable_resource_name_dns_a_record_on_launch": "false",
            "enable_resource_name_dns_aaaa_record_on_launch": "false",
            "id": "subnet-0453ecb84ca59bd5e",
            "ipv6_native": "false",
            "map_customer_owned_ip_on_launch": "false",
            "map_public_ip_on_launch": "true",
            "owner_id": "667994629779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags.%": "2",
            "tags.Name": "public-subnet1",
            "tags.kubernetes.io/cluster/test-eks-cluster": "shared",
            "tags_all.%": "2",
            "tags_all.Name": "public-subnet1",
            "tags_all.kubernetes.io/cluster/test-eks-cluster": "shared",
            "vpc_id": "vpc-04623bbd67846e1f2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfer--subnet-0b58d1adb0e630c50",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:subnet/subnet-0b58d1adb0e630c50",
            "assign_ipv6_address_on_creation": "false",
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": "false",
            "enable_resource_name_dns_a_record_on_launch": "false",
            "enable_resource_name_dns_aaaa_record_on_launch": "false",
            "id": "subnet-0b58d1adb0e630c50",
            "ipv6_native": "false",
            "map_customer_owned_ip_on_launch": "false",
            "map_public_ip_on_launch": "true",
            "owner_id": "667994629779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags.%": "2",
            "tags.Name": "public-subnet3",
            "tags.kubernetes.io/cluster/test-eks-cluster": "shared",
            "tags_all.%": "2",
            "tags_all.Name": "public-subnet3",
            "tags_all.kubernetes.io/cluster/test-eks-cluster": "shared",
            "vpc_id": "vpc-04623bbd67846e1f2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfer--vpc-04623bbd67846e1f2",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:vpc/vpc-04623bbd67846e1f2",
            "assign_generated_ipv6_cidr_block": "false",
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0893f973feef05fb8",
            "default_route_table_id": "rtb-00e44179552178e42",
            "default_security_group_id": "sg-0c1702f78b7e0ab0b",
            "dhcp_options_id": "dopt-05219facd97855402",
            "enable_classiclink": "false",
            "enable_classiclink_dns_support": "false",
            "enable_dns_hostnames": "true",
            "enable_dns_support": "true",
            "enable_network_address_usage_metrics": "false",
            "id": "vpc-04623bbd67846e1f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": "0",
            "main_route_table_id": "rtb-00e44179552178e42",
            "owner_id": "667994629779",
            "tags.%": "1",
            "tags.Name": "vpc",
            "tags_all.%": "1",
            "tags_all.Name": "vpc"
          }
        }
      ]
    }
  ]
}